# iou3d

./: .gitignore  CMakeLists.txt  README.md  iou3d.cpp  iou3d.h  rotation_test.cpp
cmake/: iou3dConfig.cmake.in
docs/: algorithm_explanation.md
examples/: CMakeLists.txt  advanced_example.cpp  simple_example.cpp
test/: rotation_test.cpp  test_iou3d.cpp  vertex_order_test.cpp
